tests/macros/confirm/mask.stderr
error: option `mask` does not exist for kind `confirm`
 --> $DIR/mask.rs:2:45
  |
2 |     let q = discourse::questions![Confirm { mask: todo!() }];
  |                                             ^^^^
