tests/macros/confirm/mask.rs
fn main() {
    let q = discourse::questions![Confirm { mask: todo!() }];
}
